wip: toolbox proxy
