# pkg/apiclient/model_file_info.go
@@ -1,0 +1,376 @@
+/*
+Daytona Server API
+
+Daytona Server API
+
+API version: v0.0.0-dev
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package apiclient
+
+import (
+	"encoding/json"
+)
+
+// checks if the FileInfo type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &FileInfo{}
+
+// FileInfo struct for FileInfo
+type FileInfo struct {
+	Group       *string `json:"group,omitempty"`
+	IsDir       *bool   `json:"isDir,omitempty"`
+	ModTime     *string `json:"modTime,omitempty"`
+	Mode        *string `json:"mode,omitempty"`
+	Name        *string `json:"name,omitempty"`
+	Owner       *string `json:"owner,omitempty"`
+	Permissions *string `json:"permissions,omitempty"`
+	Size        *int32  `json:"size,omitempty"`
+}
+
+// NewFileInfo instantiates a new FileInfo object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewFileInfo() *FileInfo {
+	this := FileInfo{}
+	return &this
+}
+
+// NewFileInfoWithDefaults instantiates a new FileInfo object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewFileInfoWithDefaults() *FileInfo {
+	this := FileInfo{}
+	return &this
+}
+
+// GetGroup returns the Group field value if set, zero value otherwise.
+func (o *FileInfo) GetGroup() string {
+	if o == nil || IsNil(o.Group) {
+		var ret string
+		return ret
+	}
+	return *o.Group
+}
+
+// GetGroupOk returns a tuple with the Group field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *FileInfo) GetGroupOk() (*string, bool) {
+	if o == nil || IsNil(o.Group) {
+		return nil, false
+	}
+	return o.Group, true
+}
+
+// HasGroup returns a boolean if a field has been set.
+func (o *FileInfo) HasGroup() bool {
+	if o != nil && !IsNil(o.Group) {
+		return true
+	}
+
+	return false
+}
+
+// SetGroup gets a reference to the given string and assigns it to the Group field.
+func (o *FileInfo) SetGroup(v string) {
+	o.Group = &v
+}
+
+// GetIsDir returns the IsDir field value if set, zero value otherwise.
+func (o *FileInfo) GetIsDir() bool {
+	if o == nil || IsNil(o.IsDir) {
+		var ret bool
+		return ret
+	}
+	return *o.IsDir
+}
+
+// GetIsDirOk returns a tuple with the IsDir field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *FileInfo) GetIsDirOk() (*bool, bool) {
+	if o == nil || IsNil(o.IsDir) {
+		return nil, false
+	}
+	return o.IsDir, true
+}
+
+// HasIsDir returns a boolean if a field has been set.
+func (o *FileInfo) HasIsDir() bool {
+	if o != nil && !IsNil(o.IsDir) {
+		return true
+	}
+
+	return false
+}
+
+// SetIsDir gets a reference to the given bool and assigns it to the IsDir field.
+func (o *FileInfo) SetIsDir(v bool) {
+	o.IsDir = &v
+}
+
+// GetModTime returns the ModTime field value if set, zero value otherwise.
+func (o *FileInfo) GetModTime() string {
+	if o == nil || IsNil(o.ModTime) {
+		var ret string
+		return ret
+	}
+	return *o.ModTime
+}
+
+// GetModTimeOk returns a tuple with the ModTime field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *FileInfo) GetModTimeOk() (*string, bool) {
+	if o == nil || IsNil(o.ModTime) {
+		return nil, false
+	}
+	return o.ModTime, true
+}
+
+// HasModTime returns a boolean if a field has been set.
+func (o *FileInfo) HasModTime() bool {
+	if o != nil && !IsNil(o.ModTime) {
+		return true
+	}
+
+	return false
+}
+
+// SetModTime gets a reference to the given string and assigns it to the ModTime field.
+func (o *FileInfo) SetModTime(v string) {
+	o.ModTime = &v
+}
+
+// GetMode returns the Mode field value if set, zero value otherwise.
+func (o *FileInfo) GetMode() string {
+	if o == nil || IsNil(o.Mode) {
+		var ret string
+		return ret
+	}
+	return *o.Mode
+}
+
+// GetModeOk returns a tuple with the Mode field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *FileInfo) GetModeOk() (*string, bool) {
+	if o == nil || IsNil(o.Mode) {
+		return nil, false
+	}
+	return o.Mode, true
+}
+
+// HasMode returns a boolean if a field has been set.
+func (o *FileInfo) HasMode() bool {
+	if o != nil && !IsNil(o.Mode) {
+		return true
+	}
+
+	return false
+}
+
+// SetMode gets a reference to the given string and assigns it to the Mode field.
+func (o *FileInfo) SetMode(v string) {
+	o.Mode = &v
+}
+
+// GetName returns the Name field value if set, zero value otherwise.
+func (o *FileInfo) GetName() string {
+	if o == nil || IsNil(o.Name) {
+		var ret string
+		return ret
+	}
+	return *o.Name
+}
+
+// GetNameOk returns a tuple with the Name field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *FileInfo) GetNameOk() (*string, bool) {
+	if o == nil || IsNil(o.Name) {
+		return nil, false
+	}
+	return o.Name, true
+}
+
+// HasName returns a boolean if a field has been set.
+func (o *FileInfo) HasName() bool {
+	if o != nil && !IsNil(o.Name) {
+		return true
+	}
+
+	return false
+}
+
+// SetName gets a reference to the given string and assigns it to the Name field.
+func (o *FileInfo) SetName(v string) {
+	o.Name = &v
+}
+
+// GetOwner returns the Owner field value if set, zero value otherwise.
+func (o *FileInfo) GetOwner() string {
+	if o == nil || IsNil(o.Owner) {
+		var ret string
+		return ret
+	}
+	return *o.Owner
+}
+
+// GetOwnerOk returns a tuple with the Owner field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *FileInfo) GetOwnerOk() (*string, bool) {
+	if o == nil || IsNil(o.Owner) {
+		return nil, false
+	}
+	return o.Owner, true
+}
+
+// HasOwner returns a boolean if a field has been set.
+func (o *FileInfo) HasOwner() bool {
+	if o != nil && !IsNil(o.Owner) {
+		return true
+	}
+
+	return false
+}
+
+// SetOwner gets a reference to the given string and assigns it to the Owner field.
+func (o *FileInfo) SetOwner(v string) {
+	o.Owner = &v
+}
+
+// GetPermissions returns the Permissions field value if set, zero value otherwise.
+func (o *FileInfo) GetPermissions() string {
+	if o == nil || IsNil(o.Permissions) {
+		var ret string
+		return ret
+	}
+	return *o.Permissions
+}
+
+// GetPermissionsOk returns a tuple with the Permissions field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *FileInfo) GetPermissionsOk() (*string, bool) {
+	if o == nil || IsNil(o.Permissions) {
+		return nil, false
+	}
+	return o.Permissions, true
+}
+
+// HasPermissions returns a boolean if a field has been set.
+func (o *FileInfo) HasPermissions() bool {
+	if o != nil && !IsNil(o.Permissions) {
+		return true
+	}
+
+	return false
+}
+
+// SetPermissions gets a reference to the given string and assigns it to the Permissions field.
+func (o *FileInfo) SetPermissions(v string) {
+	o.Permissions = &v
+}
+
+// GetSize returns the Size field value if set, zero value otherwise.
+func (o *FileInfo) GetSize() int32 {
+	if o == nil || IsNil(o.Size) {
+		var ret int32
+		return ret
+	}
+	return *o.Size
+}
+
+// GetSizeOk returns a tuple with the Size field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *FileInfo) GetSizeOk() (*int32, bool) {
+	if o == nil || IsNil(o.Size) {
+		return nil, false
+	}
+	return o.Size, true
+}
+
+// HasSize returns a boolean if a field has been set.
+func (o *FileInfo) HasSize() bool {
+	if o != nil && !IsNil(o.Size) {
+		return true
+	}
+
+	return false
+}
+
+// SetSize gets a reference to the given int32 and assigns it to the Size field.
+func (o *FileInfo) SetSize(v int32) {
+	o.Size = &v
+}
+
+func (o FileInfo) MarshalJSON() ([]byte, error) {
+	toSerialize, err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o FileInfo) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	if !IsNil(o.Group) {
+		toSerialize["group"] = o.Group
+	}
+	if !IsNil(o.IsDir) {
+		toSerialize["isDir"] = o.IsDir
+	}
+	if !IsNil(o.ModTime) {
+		toSerialize["modTime"] = o.ModTime
+	}
+	if !IsNil(o.Mode) {
+		toSerialize["mode"] = o.Mode
+	}
+	if !IsNil(o.Name) {
+		toSerialize["name"] = o.Name
+	}
+	if !IsNil(o.Owner) {
+		toSerialize["owner"] = o.Owner
+	}
+	if !IsNil(o.Permissions) {
+		toSerialize["permissions"] = o.Permissions
+	}
+	if !IsNil(o.Size) {
+		toSerialize["size"] = o.Size
+	}
+	return toSerialize, nil
+}
+
+type NullableFileInfo struct {
+	value *FileInfo
+	isSet bool
+}
+
+func (v NullableFileInfo) Get() *FileInfo {
+	return v.value
+}
+
+func (v *NullableFileInfo) Set(val *FileInfo) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableFileInfo) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableFileInfo) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableFileInfo(val *FileInfo) *NullableFileInfo {
+	return &NullableFileInfo{value: val, isSet: true}
+}
+
+func (v NullableFileInfo) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableFileInfo) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
